# vector-tile-js

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  Makefile  README.md  bench.js  eslint.config.js  fixtures.js  index.d.ts  index.js  package-lock.json  package.json
cmake/: mason.cmake
lib/: vectortile.js  vectortileclipper.js  vectortilefeature.js  vectortilelayer.js
proto/: vector_tile.proto
src/: prelude.js  vectortile.cpp
test/: bench.js  clip.test.js  parse.test.js  roundtrip.test.js  wasm.js
test/fixtures/: clip.pbf  multi-line.pbf  multi-point.pbf  multi-polygon.pbf  polygon-with-inner.pbf  singleton-multi-line.pbf  singleton-multi-point.pbf  singleton-multi-polygon.pbf  stacked-multipolygon.pbf
